  new/updated data
    glass/cdgm/* - updated to the latest zemax catalog
    glass/sumita/* - updated to the latest zemax catalog
    glass/hoya/* - updated to the latest zemax catalog
    glass/schott/* - updated to the latest zemax catalog
    glass/ohara/* - updated to the latest zemax catalog
    glass/hikari/* - updated to the latest zemax catalog
  new data (thanks to Naser Otman, Dalhousie University, Canada, for suggesting data!)
    main/Ag/Yang.yml
  new data(thanks to Matteo Pancaldi, nanoGUNE, San Sebastián, Spain, for suggesting data and initial submission in YAML format!
           thanks to Kristupas K. Tikuišis, Charles University, Prague, Czech Republic, for providing updated data in YAML format!)
    other/alloys/Ni-Fe/Tikuisis_gold150nm.yml
    other/alloys/Ni-Fe/Tikuisis_gold10nm.yml
    other/alloys/Ni-Fe/Tikuisis_bare150nm.yml
    other/alloys/Ni-Fe/Tikuisis_bare10nm.yml
  new data
    other/mixed gases/air/Mathar-1.3.yml
    other/mixed gases/air/Mathar-2.8.yml
    other/mixed gases/air/Mathar-4.35.yml
    other/mixed gases/air/Mathar-7.5.yml
  new data (thanks to Valentyn Volkov, University of Southern Denmark, for submitting data in YAML format!)
    main/Au/Yakubovsky-25nm.yml
    main/Au/Yakubovsky-53nm.yml
    main/Au/Yakubovsky-117nm.yml
  new data (thanks to Giovanni Perotto, Istituto Italiano di Tecnologia, Genova, Italy)
    other/silk/Bombyx mori/Perotto.yml
    other/silk/Bombyx mori/Perotto-uncrystallized.yml
    other/silk/Bombyx mori/Perotto-crystallized.yml
    other/silk/Antheraea mylitta/Perotto.yml
    other/silk/Samia ricini/Perotto.yml
    other/silk/Antheraea assamensis/Perotto.yml
  new data (thanks to David Rowe, University of Southampton, UK, for providing numerical data!)
    other/human body/blood/Rowe.yml
  new data (thanks to David Rowe for preparing data!)
    organic/C2H2Cl2 - dichloromethane/Bertie.yml
  updates
    other/mixed gases/air/Cyddor.yml: reference to calculation script